feat: 增加群聊上下文隔离开关

--- a/extensions/dashscope-proxy/package.json
+++ b/extensions/dashscope-proxy/package.json
@@ -30,6 +30,7 @@
         "test:coverage": "vitest run --coverage"
     },
     "publishConfig": {
+        "registry": "https://registry.npmjs.org",
         "tag": "beta"
     },
     "keywords": [
