--- a/extensions/dashscope-proxy/package.json
+++ b/extensions/dashscope-proxy/package.json
@@ -1,7 +1,7 @@
 {
     "name": "clawdbot-dashscope-proxy",
     "version": "0.2.1",
-    "description": "DashScope provider plugin for OpenClaw (native thinking)",
+    "description": "DashScope provider plugin for OpenClaw (local thinking proxy)",
     "type": "module",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
