--- a/extensions/dingtalk/package.json
+++ b/extensions/dingtalk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clawdbot-dingtalk",
-  "version": "0.3.15",
+  "version": "0.3.16",
   "description": "DingTalk (钉钉) channel plugin for Openclaw - enables AI agent messaging via DingTalk Stream API",
   "type": "module",
   "main": "./dist/index.js",
@@ -14,6 +14,7 @@
   "files": [
     "dist",
     "skills",
+    "workspace-templates",
     "openclaw.plugin.json"
   ],
   "openclaw": {
